feat: Created an API to Edit Reservations page
